--- a/dichotomie.html
+++ b/dichotomie.html
@@ -5,12 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <!-- exercice 10 -->
-  <body onload="showDate()">
-    <span
-      id="horloge"
-      style="background-color: #1c1c1c; color: silver; font-size: 40px"
-    ></span>
+  <body>
+    helo
   </body>
-  <script src="exos.js"></script>
+  <script src="dichotmie.js"></script>
 </html>
